Includer error in miles.

--- a/notebooks/Longitude_Latitude_Estimation_Example.ipynb
+++ b/notebooks/Longitude_Latitude_Estimation_Example.ipynb
@@ -98,10 +98,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total time: 7.84 seconds\n",
-      "form matrix: 2.77, fill matrix: 0.39, daily scores: 0.58, \n",
-      "daily flags: 0.05, clear detect: 0.60, clipping check: 0.39, \n",
-      "data scoring: 1.50, fix time shifts: 1.56,\n",
+      "total time: 7.51 seconds\n",
+      "form matrix: 3.42, fill matrix: 0.33, daily scores: 0.64, \n",
+      "daily flags: 0.04, clear detect: 0.31, clipping check: 0.30, \n",
+      "data scoring: 1.41, fix time shifts: 1.05,\n",
       "Length:                4.00 years\n",
       "Capacity estimate:     30.13 kW\n",
       "Data sampling:         1.0 minute\n",
@@ -276,17 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "error (miles):       77.90\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "est.estimate_longitude(estimator='calculated')\n",
     "lon = est.longitude\n",
@@ -295,7 +287,13 @@
     "ground_coord = (ground_system_configuration['latitude'], ground_system_configuration['longitude'])\n",
     "estimated_coord = (lat, lon)\n",
     "error_dist = great_circle(estimated_coord, ground_coord).miles\n",
-    "m1 = 'error (miles):       {:.2f}'.format(error_dist)\n",
+    "m1 = 'real lon:  {:.2f}\\n'.format(ground_system_configuration['longitude'])\n",
+    "m1 += 'est  lon:  {:.2f}\\n'.format(est.longitude)\n",
+    "m1 += 'real lat:  {:.2f}\\n'.format(ground_system_configuration['latitude'])\n",
+    "m1 += 'est  lat:  {:.2f}\\n'.format(est.latitude)\n",
+    "m1 += 'lon error:       {:.2f}\\n'.format(ground_system_configuration['longitude'] - est.longitude)\n",
+    "m1 += 'lat error (Degrees):       {:.2f}\\n'.format(ground_system_configuration['latitude'] - est.latitude)\n",
+    "m1 += 'error (miles):       {:.2f}'.format(error_dist)\n",
     "print(m1)"
    ]
   }
