Added error calculation in miles.

--- a/notebooks/Longitude_Latitude_Estimation_Example.ipynb
+++ b/notebooks/Longitude_Latitude_Estimation_Example.ipynb
@@ -276,9 +276,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "real lon:  -77.21\n",
+      "est  lon:  -77.35\n",
+      "real lat:  39.13\n",
+      "est  lat:  40.25\n",
+      "lon error:       0.14\n",
+      "lat error (Degrees):       -1.12\n",
+      "error (miles):       77.90\n"
+     ]
+    }
+   ],
    "source": [
     "est.estimate_longitude(estimator='calculated')\n",
     "lon = est.longitude\n",
