Added error calculation in miles.

--- a/notebooks/Longitude_Latitude_Estimation_Example.ipynb
+++ b/notebooks/Longitude_Latitude_Estimation_Example.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Configuration information from the published documentation:"
+    "# Configuration information from the published documentation:"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load in 4-year data file, derived from NIST CSV files."
+    "# Load in 4-year data file, derived from NIST CSV files."
    ]
   },
   {
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Utilize standard `solar-data-tools` preprocessing pipeline."
+    "# Utilize standard `solar-data-tools` preprocessing pipeline."
    ]
   },
   {
@@ -98,10 +98,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total time: 7.51 seconds\n",
-      "form matrix: 3.42, fill matrix: 0.33, daily scores: 0.64, \n",
-      "daily flags: 0.04, clear detect: 0.31, clipping check: 0.30, \n",
-      "data scoring: 1.41, fix time shifts: 1.05,\n",
+      "total time: 5.79 seconds\n",
+      "form matrix: 2.20, fill matrix: 0.33, daily scores: 0.40, \n",
+      "daily flags: 0.03, clear detect: 0.31, clipping check: 0.30, \n",
+      "data scoring: 1.17, fix time shifts: 1.07,\n",
       "Length:                4.00 years\n",
       "Capacity estimate:     30.13 kW\n",
       "Data sampling:         1.0 minute\n",
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initialize estimator class with the data handler instance and timezone information."
+    "# Initialize estimator class with the data handler instance and timezone information."
    ]
   },
   {
@@ -150,12 +150,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Estimate longitude using Haghdadi's published method of taking the median of daily estimates:"
+    "# Estimate longitude using default keyboard arguments:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Real Longitude:  -77.21\n",
+      "Estimated Longitude:  -77.35\n",
+      "error:       0.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "est.estimate_longitude()\n",
+    "lon = est.longitude\n",
+    "\n",
+    "m1 = 'Real Longitude:  {:.2f}\\n'.format(ground_system_configuration['longitude'])\n",
+    "m1 += 'Estimated Longitude:  {:.2f}\\n'.format(est.longitude)\n",
+    "m1 += 'error:       {:.2f}'.format(ground_system_configuration['longitude'] - est.longitude)\n",
+    "print(m1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Estimate longitude using Haghdadi's published method of taking the median of daily estimates:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -181,28 +213,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Estimate longitude using cost-function minimization method, with a Huber cost."
+    "# Estimate longitude using cost-function minimization method, with a Huber cost."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "real lon:  -77.21\n",
-      "est  lon:  -77.36\n",
+      "Real Longitude:  -77.21\n",
+      "Estimated Longitude:  -77.36\n",
       "error:       0.15\n"
      ]
     }
    ],
    "source": [
     "est.estimate_longitude(estimator='fit_huber')\n",
-    "m1 = 'real lon:  {:.2f}\\n'.format(ground_system_configuration['longitude'])\n",
-    "m1 += 'est  lon:  {:.2f}\\n'.format(est.longitude)\n",
+    "\n",
+    "m1 = 'Real Longitude:  {:.2f}\\n'.format(ground_system_configuration['longitude'])\n",
+    "m1 += 'Estimated Longitude:  {:.2f}\\n'.format(est.longitude)\n",
     "m1 += 'error:       {:.2f}'.format(ground_system_configuration['longitude'] - est.longitude)\n",
     "print(m1)"
    ]
@@ -211,12 +244,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Estimate latitude using optimized method to calculate daylight hours"
+    "# Estimate latitude using default keyboard arguments"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Real Latitude:  39.13\n",
+      "Estimated  Latitude:  40.25\n",
+      "error:       -1.12\n"
+     ]
+    }
+   ],
+   "source": [
+    "est.estimate_latitude()\n",
+    "\n",
+    "m1 = 'Real Latitude:  {:.2f}\\n'.format(ground_system_configuration['latitude'])\n",
+    "m1 += 'Estimated  Latitude:  {:.2f}\\n'.format(est.latitude)\n",
+    "m1 += 'error:       {:.2f}'.format(ground_system_configuration['latitude'] - est.latitude)\n",
+    "print(m1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Estimate latitude using optimized method to calculate daylight hours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -241,12 +305,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Estimate latitude using sunrise-sunset method to calculate daylight hours"
+    "# Estimate latitude using sunrise-sunset method to calculate daylight hours"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -271,45 +335,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Estimate error in miles using Haghdadi's published method of taking the median of daily estimates and the optimized method to calculate daylight hours."
+    "# Estimate error in miles for Longitude and Latitude Calculation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "real lon:  -77.21\n",
-      "est  lon:  -77.35\n",
-      "real lat:  39.13\n",
-      "est  lat:  40.25\n",
-      "lon error:       0.14\n",
-      "lat error (Degrees):       -1.12\n",
+      "Longitude error (Degrees):       0.14\n",
+      "Latitude error (Degrees):       -1.12\n",
       "error (miles):       77.90\n"
      ]
     }
    ],
    "source": [
-    "est.estimate_longitude(estimator='calculated')\n",
+    "est = ConfigurationEstimator(dh, gmt_offset=-5)\n",
+    "est.estimate_longitude()\n",
+    "est.estimate_latitude()\n",
+    "\n",
     "lon = est.longitude\n",
-    "est.estimate_latitude(daylight_method='optimized')\n",
     "lat = est.latitude\n",
     "ground_coord = (ground_system_configuration['latitude'], ground_system_configuration['longitude'])\n",
     "estimated_coord = (lat, lon)\n",
     "error_dist = great_circle(estimated_coord, ground_coord).miles\n",
-    "m1 = 'real lon:  {:.2f}\\n'.format(ground_system_configuration['longitude'])\n",
-    "m1 += 'est  lon:  {:.2f}\\n'.format(est.longitude)\n",
-    "m1 += 'real lat:  {:.2f}\\n'.format(ground_system_configuration['latitude'])\n",
-    "m1 += 'est  lat:  {:.2f}\\n'.format(est.latitude)\n",
-    "m1 += 'lon error:       {:.2f}\\n'.format(ground_system_configuration['longitude'] - est.longitude)\n",
-    "m1 += 'lat error (Degrees):       {:.2f}\\n'.format(ground_system_configuration['latitude'] - est.latitude)\n",
+    "m1 = 'Longitude error (Degrees):       {:.2f}\\n'.format(ground_system_configuration['longitude'] - est.longitude)\n",
+    "m1 += 'Latitude error (Degrees):       {:.2f}\\n'.format(ground_system_configuration['latitude'] - est.latitude)\n",
     "m1 += 'error (miles):       {:.2f}'.format(error_dist)\n",
     "print(m1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
