Replaced 'Hag' and 'Haghdadi' by 'de_rosa'.

--- a/notebooks/Longitude_Latitude_Estimation_Example-Copy1.ipynb
+++ b/notebooks/Longitude_Latitude_Estimation_Example-Copy1.ipynb
@@ -98,10 +98,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total time: 7.05 seconds\n",
-      "form matrix: 3.45, fill matrix: 0.34, daily scores: 0.42, \n",
-      "daily flags: 0.02, clear detect: 0.30, clipping check: 0.30, \n",
-      "data scoring: 1.20, fix time shifts: 1.02,\n",
+      "total time: 7.13 seconds\n",
+      "form matrix: 3.43, fill matrix: 0.34, daily scores: 0.49, \n",
+      "daily flags: 0.02, clear detect: 0.29, clipping check: 0.30, \n",
+      "data scoring: 1.20, fix time shifts: 1.06,\n",
       "Length:                4.00 years\n",
       "Capacity estimate:     30.13 kW\n",
       "Data sampling:         1.0 minute\n",
@@ -195,13 +195,13 @@
      "output_type": "stream",
      "text": [
       "real lon:  -77.21\n",
-      "est  lon:  -77.35\n",
-      "error:       0.14\n"
+      "est  lon:  -77.33\n",
+      "error:       0.12\n"
      ]
     }
    ],
    "source": [
-    "est.estimate_longitude(estimator='calculated')\n",
+    "est.estimate_longitude(estimator='calculated', eot_calculation=('da_rosa'),)\n",
     "lon = est.longitude\n",
     "m1 = 'real lon:  {:.2f}\\n'.format(ground_system_configuration['longitude'])\n",
     "m1 += 'est  lon:  {:.2f}\\n'.format(est.longitude)\n",
