Deleted global variables.

--- a/notebooks/Longitude_Latitude_Estimation_Example-Copy1.ipynb
+++ b/notebooks/Longitude_Latitude_Estimation_Example-Copy1.ipynb
@@ -440,176 +440,302 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 255,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.max(est.data_matrix > est.daytime_threshold_fit)"
+    "#Standard Imports\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from geopy.distance import great_circle\n",
+    "from glob import glob\n",
+    "from time import time\n",
+    "# Solar Data Tools imports\n",
+    "from solardatatools import DataHandler\n",
+    "# pv-system-profiler imports\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "sys.path.append('/Users/londonoh/Documents/github/pv-system-profiler')\n",
+    "from pvsystemprofiler.estimator import ConfigurationEstimator\n",
+    "from pvsystemprofiler.longitude_study import LongitudeStudy\n",
+    "from pvsystemprofiler.scripts.modules.script_functions import remote_execute\n",
+    "from pvsystemprofiler.latitude_study import LatitudeStudy\n",
+    "from pvsystemprofiler.tilt_azimuth_study import TiltAzimuthStudy\n",
+    "from pvsystemprofiler.longitude_study import LongitudeStudy\n",
+    "from pvsystemprofiler.scripts.modules.script_functions import remote_execute\n",
+    "from pvsystemprofiler.latitude_study import LatitudeStudy\n",
+    "from solardatatools.dataio import load_constellation_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.max(est.boolean_daytime)"
+    "ground_system_configuration = {\n",
+    "    'longitude': -77.2141,\n",
+    "    'latitude': 39.1319,\n",
+    "    'tilt': 20,\n",
+    "    'azimuth': 0,\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 265,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True,  True,  True, ...,  True,  True,  True])"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "est.day_range"
+    "dh = DataHandler(df)\n",
+    "dh.run_pipeline(power_col=('ground', 'ShuntPDC_kW_Avg_4'), verbose=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 266,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-227.72605212, -227.83785156, -227.9485859 , ..., -227.38531251,\n",
-       "        -227.49967653, -227.61329193],\n",
-       "       [-227.47605212, -227.58785156, -227.6985859 , ..., -227.13531251,\n",
-       "        -227.24967653, -227.36329193],\n",
-       "       [-227.22605212, -227.33785156, -227.4485859 , ..., -226.88531251,\n",
-       "        -226.99967653, -227.11329193],\n",
-       "       ...,\n",
-       "       [ 131.52394788,  131.41214844,  131.3014141 , ...,  131.86468749,\n",
-       "         131.75032347,  131.63670807],\n",
-       "       [ 131.77394788,  131.66214844,  131.5514141 , ...,  132.11468749,\n",
-       "         132.00032347,  131.88670807],\n",
-       "       [ 132.02394788,  131.91214844,  131.8014141 , ...,  132.36468749,\n",
-       "         132.25032347,  132.13670807]])"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "est.omega"
+    "ta_study = TiltAzimuthStudy(data_handler=dh, daytime_threshold=None,\n",
+    "                            lon_precalculate=ground_system_configuration['longitude'], \n",
+    "                            lat_precalculate=ground_system_configuration['latitude'], \n",
+    "                            tilt_precalculate=None,\n",
+    "                            azimuth_precalculate=None, lat_true_value=None, \n",
+    "                            tilt_true_value=ground_system_configuration['tilt'],\n",
+    "                            azimuth_true_value=ground_system_configuration['azimuth'],\n",
+    "                            gmt_offset=-5, nrandom_init_values=1)\n",
+    "ta_study.run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day range</th>\n",
+       "      <th>declination method</th>\n",
+       "      <th>cvx parameter</th>\n",
+       "      <th>threshold quantile</th>\n",
+       "      <th>latitude initial value</th>\n",
+       "      <th>tilt initial value</th>\n",
+       "      <th>azimuth initial value</th>\n",
+       "      <th>tilt</th>\n",
+       "      <th>azimuth</th>\n",
+       "      <th>tilt residual</th>\n",
+       "      <th>azimuth residual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>full_year</td>\n",
+       "      <td>cooper</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>42.037558</td>\n",
+       "      <td>166.660735</td>\n",
+       "      <td>34.378587</td>\n",
+       "      <td>-3.496654</td>\n",
+       "      <td>-14.378587</td>\n",
+       "      <td>3.496654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>full_year</td>\n",
+       "      <td>spencer</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>42.037558</td>\n",
+       "      <td>166.660735</td>\n",
+       "      <td>34.735237</td>\n",
+       "      <td>-3.476016</td>\n",
+       "      <td>-14.735237</td>\n",
+       "      <td>3.476016</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([29.94997013, 30.07003668, 30.19373703, ..., 29.72404008,\n",
-       "       29.83498914, 29.94997013])"
+       "   day range declination method  cvx parameter  threshold quantile  \\\n",
+       "0  full_year             cooper            0.9                 0.9   \n",
+       "1  full_year            spencer            0.9                 0.9   \n",
+       "\n",
+       "   latitude initial value  tilt initial value  azimuth initial value  \\\n",
+       "0                     NaN           42.037558             166.660735   \n",
+       "1                     NaN           42.037558             166.660735   \n",
+       "\n",
+       "        tilt   azimuth  tilt residual  azimuth residual  \n",
+       "0  34.378587 -3.496654     -14.378587          3.496654  \n",
+       "1  34.735237 -3.476016     -14.735237          3.476016  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "est.scale_factor_costheta"
+    "ta_study.results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day range</th>\n",
+       "      <th>declination method</th>\n",
+       "      <th>cvx parameter</th>\n",
+       "      <th>threshold quantile</th>\n",
+       "      <th>latitude initial value</th>\n",
+       "      <th>tilt initial value</th>\n",
+       "      <th>azimuth initial value</th>\n",
+       "      <th>tilt</th>\n",
+       "      <th>azimuth</th>\n",
+       "      <th>tilt residual</th>\n",
+       "      <th>azimuth residual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>full_year</td>\n",
+       "      <td>cooper</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>54.321981</td>\n",
+       "      <td>121.013101</td>\n",
+       "      <td>34.379794</td>\n",
+       "      <td>-3.495933</td>\n",
+       "      <td>-14.379794</td>\n",
+       "      <td>3.495933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>full_year</td>\n",
+       "      <td>spencer</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>54.321981</td>\n",
+       "      <td>121.013101</td>\n",
+       "      <td>34.736630</td>\n",
+       "      <td>-3.475631</td>\n",
+       "      <td>-14.736630</td>\n",
+       "      <td>3.475631</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([31.63089551, 31.64084973, 31.6508948 , ..., 31.61133295,\n",
-       "       31.62106608, 31.63089551])"
+       "   day range declination method  cvx parameter  threshold quantile  \\\n",
+       "0  full_year             cooper            0.9                 0.9   \n",
+       "1  full_year            spencer            0.9                 0.9   \n",
+       "\n",
+       "   latitude initial value  tilt initial value  azimuth initial value  \\\n",
+       "0                     NaN           54.321981             121.013101   \n",
+       "1                     NaN           54.321981             121.013101   \n",
+       "\n",
+       "        tilt   azimuth  tilt residual  azimuth residual  \n",
+       "0  34.379794 -3.495933     -14.379794          3.495933  \n",
+       "1  34.736630 -3.475631     -14.736630          3.475631  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "est.daytime_threshold_fit"
+    "ta_study = TiltAzimuthStudy(data_handler=dh, daytime_threshold=None,\n",
+    "                            lon_precalculate=ground_system_configuration['longitude'], \n",
+    "                            lat_precalculate=ground_system_configuration['latitude'], \n",
+    "                            tilt_precalculate=None,\n",
+    "                            azimuth_precalculate=None, lat_true_value=None, \n",
+    "                            tilt_true_value=ground_system_configuration['tilt'],\n",
+    "                            azimuth_true_value=ground_system_configuration['azimuth'],\n",
+    "                            gmt_offset=-5, nrandom_init_values=1)\n",
+    "ta_study.run()\n",
+    "ta_study.results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "65190"
+       "array([0.9])"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum(est.boolean_daytime)"
+    "ta_study.threshold_x2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 276,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True,  True,  True, ...,  True,  True,  True])"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "est.day_range"
+    "ta_study.daytime_threshold"
    ]
   },
   {
