Removed unused imports and formating.

--- a/notebooks/Parameter_Estimation_Example.ipynb
+++ b/notebooks/Parameter_Estimation_Example.ipynb
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,9 +436,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Real tilt:  20.00\n",
+      "Estimated Tilt:  21.61\n",
+      "error:       -1.61\n",
+      "Real azimuth:  0.00\n",
+      "Estimated azimuth:  -1.37\n",
+      "error:       1.37\n"
+     ]
+    }
+   ],
    "source": [
     "est = ConfigurationEstimator(dh, gmt_offset=-5)\n",
     "est.estimate_orientation(lon_precalculate=ground_system_configuration['longitude']\n",
