Modified filter_data, format, added docstrings.

--- a/notebooks/Parameter_Estimation_Example.ipynb
+++ b/notebooks/Parameter_Estimation_Example.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,17 +105,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total time: 35.16 seconds\n",
+      "total time: 35.88 seconds\n",
       "--------------------------------\n",
       "Breakdown\n",
       "--------------------------------\n",
-      "Preprocessing              18.00s\n",
-      "Cleaning                   14.03s\n",
-      "Filtering/Summarizing      3.12s\n",
-      "    Data quality           0.72s\n",
+      "Preprocessing              18.71s\n",
+      "Cleaning                   14.02s\n",
+      "Filtering/Summarizing      3.14s\n",
+      "    Data quality           0.71s\n",
       "    Clear day detect       0.40s\n",
       "    Clipping detect        0.33s\n",
-      "    Capacity change detect 1.68s\n",
+      "    Capacity change detect 1.71s\n",
       "\n",
       "Length:                4.00 years\n",
       "Capacity estimate:     30.13 kW\n",
@@ -236,8 +236,8 @@
      "output_type": "stream",
      "text": [
       "Real Longitude:  -77.21\n",
-      "Estimated Longitude:  -77.62\n",
-      "error:       0.40\n"
+      "Estimated Longitude:  -77.52\n",
+      "error:       0.30\n"
      ]
     }
    ],
@@ -379,8 +379,8 @@
      "output_type": "stream",
      "text": [
       "Real Latitude:  39.13\n",
-      "Estimated  Latitude:  43.20\n",
-      "error:       -4.07\n"
+      "Estimated  Latitude:  43.18\n",
+      "error:       -4.05\n"
      ]
     }
    ],
@@ -411,8 +411,8 @@
      "output_type": "stream",
      "text": [
       "real lat:  39.13\n",
-      "est  lat:  43.20\n",
-      "error:       -4.07\n"
+      "est  lat:  43.18\n",
+      "error:       -4.05\n"
      ]
     }
    ],
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -557,8 +557,8 @@
       "Estimated Tilt:  21.62\n",
       "error tilt:   -1.62\n",
       "Real azimuth:   0.00\n",
-      "Estimated azim:   -2.16\n",
-      "error azim:   2.16\n"
+      "Estimated azim:   -2.03\n",
+      "error azim:   2.03\n"
      ]
     }
    ],
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -641,9 +641,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "real lon:  -77.21\n",
+      "est  lon:  -77.52\n",
+      "error lon: 0.30\n",
+      "real lat:  39.13\n",
+      "est  lat:  43.18\n",
+      "error lat: -4.05\n",
+      "Real tilt:  20.00\n",
+      "Estimated Tilt: 25.67\n",
+      "error tilt: -5.67\n",
+      "Real azimuth: 0.00\n",
+      "Estimated azim: -2.40\n",
+      "error azim: 2.40\n"
+     ]
+    }
+   ],
    "source": [
     "est = est_current\n",
     "est.estimate_all()\n",
@@ -669,6 +688,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
