Added simplified notebook.

--- a/notebooks/Parameter_Estimation_Example_Light.ipynb
+++ b/notebooks/Parameter_Estimation_Example_Light.ipynb
@@ -335,9 +335,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "real lon:  -77.21\n",
+      "est  lon:  -77.52\n",
+      "error:       0.31\n"
+     ]
+    }
+   ],
    "source": [
     "est.estimate_longitude(estimator='calculated', eot_calculation=('da_rosa'))\n",
     "lon = est.longitude\n",
