removed fix_time_shifts as kwarg

--- a/notebooks/function_example.ipynb
+++ b/notebooks/function_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 24.8 seconds       \n",
+      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 23.6 seconds       \n",
       "Scan rates (in seconds): [300, 280]\n",
       "0 transitions detected.\n",
       "Suggest splitting data set between:\n",
@@ -340,17 +340,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total time: 26.34 seconds\n",
+      "total time: 25.24 seconds\n",
       "--------------------------------\n",
       "Breakdown\n",
       "--------------------------------\n",
-      "Preprocessing              11.25s\n",
-      "Cleaning                   12.71s\n",
-      "Filtering/Summarizing      2.38s\n",
-      "    Data quality           0.44s\n",
-      "    Clear day detect       0.30s\n",
-      "    Clipping detect        0.32s\n",
-      "    Capacity change detect 1.33s\n",
+      "Preprocessing              10.92s\n",
+      "Cleaning                   11.96s\n",
+      "Filtering/Summarizing      2.36s\n",
+      "    Data quality           0.45s\n",
+      "    Clear day detect       0.29s\n",
+      "    Clipping detect        0.31s\n",
+      "    Capacity change detect 1.30s\n",
       "\n"
      ]
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -468,18 +468,18 @@
        " 'meas_sr_raw': None,\n",
        " 'meas_ss_raw': None,\n",
        " 'thres_raw': None,\n",
-       " 'est_sr_f': array([6.13399208, 6.13491374, 6.13553589, ..., 6.13096545, 6.13262545,\n",
-       "        6.13399208]),\n",
-       " 'est_ss_f': array([15.95606159, 15.96324724, 15.97135561, ..., 15.94540545,\n",
-       "        15.95026762, 15.95606159]),\n",
-       " 'meas_sr_f': array([6.41666667, 6.5       , 6.75      , ..., 6.58333333, 7.66666667,\n",
-       "        6.58333333]),\n",
-       " 'meas_ss_f': array([15.83333333, 15.75      , 15.25      , ..., 15.75      ,\n",
-       "        15.58333333, 15.83333333]),\n",
+       " 'est_sr_f': array([7.27021438, 7.26635585, 7.26187951, ..., 7.27546266, 7.27314674,\n",
+       "        7.27021438]),\n",
+       " 'est_ss_f': array([17.04094663, 17.05082992, 17.06119466, ..., 17.02314619,\n",
+       "        17.03179782, 17.04094663]),\n",
+       " 'meas_sr_f': array([7.5       , 7.58333333, 7.83333333, ..., 7.58333333, 8.66666667,\n",
+       "        7.58333333]),\n",
+       " 'meas_ss_f': array([16.91666667, 16.83333333, 16.33333333, ..., 16.75      ,\n",
+       "        16.58333333, 16.83333333]),\n",
        " 'thres_f': 1e-05}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,16 +575,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-71.96605190107411"
+       "-76.99589908349992"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
     {
      "data": {
       "text/plain": [
-       "-71.96605190107411"
+       "-76.99172047796024"
       ]
      },
      "execution_count": 27,
@@ -694,6 +694,27 @@
    ],
    "source": [
     "fit_longitude(eot_duffie2, solarnoon2, days2, gmt_offset, loss='l2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12.20833333, 12.20833333, 12.08333333, ..., 12.16666667,\n",
+       "       12.625     , 12.20833333])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solarnoon"
    ]
   },
   {
